<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/toolbar"
        android:background="@color/primary"
        android:ellipsize="middle"
        android:gravity="center|start"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/app_name"
        android:textColor="@color/icons"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/remove"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/toDoReminderLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button"
        android:layout_below="@id/content"
        android:gravity="start"
        android:orientation="horizontal"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1.5"
            android:drawableStart="@drawable/ic_alarm_add_grey"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/snooze"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1.5" />

    </LinearLayout>

</RelativeLayout>