<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:animateLayoutChanges="true"
            android:gravity="center"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true">

            <EditText
                android:id="@+id/editContent"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/title"
                android:inputType="text"
                android:lines="2"
                android:maxLines="3"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/secondary_text"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedscrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--设置个人提醒-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="36dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imgAlarm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/ic_alarm_add_grey" />

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/remind_me"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_compat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp" />

            </LinearLayout>

            <!--设置日期选择提醒-->
            <LinearLayout
                android:id="@+id/llRenderTimeAndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:animateLayoutChanges="true"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top">


                    <EditText
                        android:id="@+id/edtDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:editable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:inputType="date|datetime"
                        android:textIsSelectable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="\@"
                        android:textColor="?attr/colorAccent" />

                    <EditText
                        android:id="@+id/edtTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:editable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:inputType="date|datetime"
                        android:textIsSelectable="false" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvRenderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="2dp"
                    android:text="@string/remind_date_and_time"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:outlineProvider="none"
        android:src="@drawable/ic_send"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:rippleColor="@color/colorPrimaryDark"
        tools:targetApi="lollipop" />

</android.support.design.widget.CoordinatorLayout>